--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -88,12 +88,12 @@ button {
     color: #721c24;
     background-color: #f8d7da;
 }
-table#employee_list th {
+table#user_list th {
     width: 30%;
     padding: 10px 2%;
 }
 
-table#employee_list td {
+table#user_list td {
     width: 29%;
     padding: 10px 2%;
 }
@@ -116,7 +116,7 @@ select {
     display: inline-block;
 }
 
-#employee_name {
+#user_name {
     color: #cccccc;
     width: 36%;
     padding-right: 3%;
@@ -131,24 +131,24 @@ select {
 h1 a {
     color: #eeeeee;
 }
-table#report_list th {
+table#user_list th {
     font-weight: bold;
     padding: 10px 2%;
 }
 
-table#report_list .report_name {
+table#food_list .food_name {
     width: 20%;
     padding: 10px 2%;
 }
-table#report_list .report_date {
+table#food_list .amount {
     width: 20%;
 }
 
-table#report_list .report_title {
+table#food_list .open_flag {
     width: 37%;
 }
 
-table#report_list .report_action {
+table#food_list .limit {
     width: 13%;
 }
 pre {
